tests/ui/impl-trait/in-trait/default-body-type-err-2.stderr
error: default body not allowed on async trait method
  --> $DIR/default-body-type-err-2.rs:8:45
   |
LL |     async fn woopsie_async(&self) -> String {
   |                                             ^ remove this body, or move it to an impl instead

error: aborting due to previous error

